Fix issue with task delete. Issue had to do with the data quality of the db object. task-id props were missing.
Reported-by: J. Aaron Crick

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,2 @@
-Use UNIDs for all people, instead of fname-lname
+* Use UNIDs for all people, instead of fname-lname
+* Make loader display until db initialisation is complete
