Edit task working. Open existing task in modal window.
Reported-by: J. Aaron Crick

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,2 @@
 * Use UNIDs for all people, instead of fname-lname
-* Make loader display until db initialisation is complete
+* Load existing tasks in modal
