Create tabbed-view component. Refactor Person component to use tabbed-view. Update design of home view to use tabbed-view, to support Team and Person views.
Reported-by: J. Aaron Crick

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,4 @@
 * Use UNIDs for all people, instead of fname-lname
 * Add person availability (integrate with calendar?)
+* Add Team view
+* Refactor events, make them more generic
