--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,6 @@
 * Use UNIDs for all people, instead of fname-lname
 * Add person availability (integrate with calendar?)
-* Add Team view
+* Adjust the db structure to support teams
 * Refactor events, make them more generic
 * Refactor Tasks and Perf views to have dynamic subscriptions (if possible)
 * Remove all hard-coded bulma class references. Add them to a Map.
-* BUG: Growth Metric - unable to select progress from select
