--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,4 @@
 * Refactor events, make them more generic
 * Refactor Tasks and Perf views to have dynamic subscriptions (if possible)
 * Remove all hard-coded bulma class references. Add them to a Map.
+* Persist tabbed views with query strings (People / Team, and Inside Person each tab.)
