Update People to have person-id, rather than using a natural key of fname + lname.
Reported-by: J. Aaron Crick

--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,5 @@
 * Refactor Tasks and Perf views to have dynamic subscriptions (if possible)
 * Remove all hard-coded bulma class references. Add them to a Map.
 * Persist tabbed views with query strings (People / Team, and Inside Person each tab.)
+* Format JSON of app-db
+* Migrate to Mongo
