--- a/todo.txt
+++ b/todo.txt
@@ -2,4 +2,4 @@
 * Refactor events, make them more generic
 * Refactor Tasks and Perf views to have dynamic subscriptions (if possible)
 * Persist tabbed views with query strings (People / Team, and Inside Person each tab.)
-* Migrate to Mongo
+* Migrate to multiple files on the local machine
