Change structure of person to keep sets of documents in a data property. Put all profile- related data in profile. Fix navigation bug in tabbed-view - differentiate between HP and other pages.
Reported-by: J. Aaron Crick

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 * Add person availability (integrate with calendar?)
 * Refactor events, make them more generic
 * Refactor Tasks and Perf views to have dynamic subscriptions (if possible)
-* Migrate to multiple files on the local machine
+* Migrate to mongo
