--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,4 @@
 * Refactor Tasks and Perf views to have dynamic subscriptions (if possible)
 * Migrate to mongo
 * Title not working in tabbed-view - active-person not being set???
+* Restore default value of Begin to Metric dropdown in event (add callback)
