--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-* Team Performance and Tasks (or remove them)
-* All Tasks and Perfs separated out into individual files
-* Tasks and Perfs updated to have owner-id prop (Tasks have person-id right now, replace with owner-id)
+* Update Tasks view to have two sections: People and Team
+* Fix default value on React Select (still not setting)
+* Get People associated with a team based on the person's team ID
