--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
 * Update Tasks view to have two sections: People and Team
 * Fix default value on React Select (still not setting)
-* Get People associated with a team based on the person's team ID
+* How to save people to a team from the team form... 
